0.21.2 [2021-09-27]
The major changes of this version:
- Annual aberration correction. Planet positions are finally very accurate!
- Bookmarks replaced by Observation Lists
- Politically neutral geonames
- Right-click opens plugin configuration
- Improved computation of rising, transit, setting times
- "Goto next twilight" functionality
- Two new Greek skycultures
- Updated Mul-Apin skyculture with new artwork
- Improved fidelity of Lunar eclipses
- Fixed display of stellar proper motion
- Many fixes in core and plugins

0.21.1 [2021-06-24]
The major changes of this version:
- Updated designations of stars and handling of list of designations 
  and common names those stars
- Updated Almagest and al-Sufi skycultures
- Many changes in plugins
- Many fixes in core and plugins for support HiDPI devices
- Enhancements in visualization of markings and in scripting engine

0.21.0 [2021-03-28]
The major changes of this version:
- We have finally completed our work on accurate planet axes, 
  including Lunar libration
- Visualisation of Earth shadow for Lunar eclipses
- Better texture for the Lunar surface
- Added the latest algorithms for planet magnitudes
- Enhanced Calendars plugin
- Replaced "arabic" by more accurate "al-Sufi" skyculture
- Planets are now scalable and Solar glare switchable for didactic 
  applications

We have also published a scientific paper about the application of
Stellarium in cultural astronomy: https://doi.org/10.1558/jsa.17822

0.20.4 [2020-12-28]
The major changes of this version:
- Added Calendars plugin
- Many changes in AstroCalc tool and core of Stellarium
- Many changes in plugins
- Updated DSO catalog

0.20.3 [2020-09-27]
The major changes of this version:
- Fixed nutation and, with it, season beginning times
- Many changes in AstroCalc tool and core of Stellarium
- Many changes in Oculars and Satellites plugins
- Updated DSO catalog

0.20.2 [2020-06-22]
The major changes of this version: