@@ -352,6 +352,7 @@ Right click                      & Clear selection \\
 \toprule
 \emph{Shortcut key}	& \emph{Description}\\\midrule
 \key{\ctrl+Alt+S}	& Import orbital elements in MPC format... \\
+\key{\ctrl+Alt+Shift+S}	& Open Solar System Editor \\
 \bottomrule
 \end{tabular}
 \end{center}
