@@ -638,7 +638,7 @@ so try loading this only on a reasonably fast computer, and think about deleting
 The second tab lists all currently loaded minor bodies (see figure~\ref{fig:SolarSystemEditor:SolarSystem}).  It is recommended
 to remove old entries of yesteryear's comets if you don't need them any
 longer. Just select one or more objects and press \button{Remove}.
-If you have a very weak computer, you may want to reduce the number of
+If you have a slow computer, you may want to reduce the number of
 minor bodies to just a handful to improve performance.
 
 \begin{figure}[tbh]\centering
