@@ -1,7 +1,7 @@
 
-SET(SOLARSYSTEMEDITOR_MAJOR "0")
-SET(SOLARSYSTEMEDITOR_MINOR "2")
-SET(SOLARSYSTEMEDITOR_PATCH "7")
+SET(SOLARSYSTEMEDITOR_MAJOR "1")
+SET(SOLARSYSTEMEDITOR_MINOR "1")
+SET(SOLARSYSTEMEDITOR_PATCH "0")
 SET(SOLARSYSTEMEDITOR_VERSION "${SOLARSYSTEMEDITOR_MAJOR}.${SOLARSYSTEMEDITOR_MINOR}.${SOLARSYSTEMEDITOR_PATCH}")
 
 ADD_DEFINITIONS(-DSOLARSYSTEMEDITOR_PLUGIN_VERSION="${SOLARSYSTEMEDITOR_VERSION}")
