@@ -1,3 +1,5 @@
+- Solar System Editor shortcuts reviewed
+
 0.21.2 [2021-09-27]
 The major changes of this version:
 - Annual aberration correction. Planet positions are finally very accurate!
